--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     },
     "eslint.nodePath": "/Users/garumugam/.vscode/extensions/salesforce.salesforcedx-vscode-lwc-44.18.0/node_modules",
     "html.suggest.angular1": false,
-    "html.suggest.ionic": false
+    "html.suggest.ionic": false,
+    "salesforcedx-vscode-core.show-cli-success-msg": false
 }
