Adding  YouTube Search Demo from Mohith's Demo

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -5,6 +5,12 @@
         "paths": {
             "c/demo1": [
                 "demo1/demo1.js"
+            ],
+            "c/search-input": [
+                "searchInput/searchInput.js"
+            ],
+            "c/youtube-search-lwc": [
+                "youtubeSearchLWC/youtubeSearchLWC.js"
             ]
         }
     },
