Changes as of Feb-7

--- a/force-app/main/default/lwc/jsconfig.json
+++ b/force-app/main/default/lwc/jsconfig.json
@@ -3,6 +3,9 @@
         "experimentalDecorators": true,
         "baseUrl": ".",
         "paths": {
+            "c/apex-wiring-demo2": [
+                "apexWiringDemo2/apexWiringDemo2.js"
+            ],
             "c/demo1": [
                 "demo1/demo1.js"
             ],
